<resources>
    <string name="image">图片</string>
    <string name="forget_pass">忘记密码？</string>
    <string name="ellipsis">。。。</string>
    <string name="empty"> </string>
    <string name="text">Text</string>
    <string name="test">Test</string>
    <string name="start">Start</string>
    <string name="start_all">StartAll</string>

    <string name="number">0</string>
    <string name="number_o">0</string>
    <string name="number_t">47</string>
    <string name="number_f">99+</string>
    <string name="number_30">30</string>
    <string name="number_50">50</string>
    <string name="number_70">70</string>

    <string name="top_text">TopTextView</string>
    <string name="bottom_text">BottomTextView</string>

    <string name="toolbar_menu_one">m_1</string>
    <string name="toolbar_menu_two">m_2</string>
    <string name="toolbar_menu_three">m_3</string>

    <string name="gps">GPS</string>
    <string name="network">NETWORK</string>
    <string name="passive">PASSIVE</string>
    <string name="g">G</string>
    <string name="n">N</string>
    <string name="p">P</string>
    <string name="a">A</string>
    <string name="b">B</string>

    <string name="file_sort">排序</string>
    <string name="file_sort_time">按时间排序</string>
    <string name="file_sort_name">按名称排序</string>
    <string name="file_sort_size">按大小排序</string>
    <string name="file_search">搜索</string>
    <string name="file_show">显示</string>
    <string name="file_hide">隐藏</string>

    <string name="get_file_fail">获取文件失败</string>

    <string name="transition_name">共享图片</string>
    <string name="transition_layout">共享布局</string>

    <string name="select_image">选择照片</string>

    <string name="float_test">float</string>
    <string name="float_sys">sysFloat</string>
    <string name="dialog_test">dialog</string>
    <string name="live_service">liveService</string>
    <string name="bus_test">busTest</string>
    <string name="bus_check">busCheck</string>
    <string name="cut">cut</string>

    <string name="start_t">开始</string>
    <string name="end_t">结束</string>
    <string name="request_t">请求</string>
    <string name="download">下载</string>

    <string name="typeface_test">一段简单的测试文字</string>
    <string name="typeface_test_multi">测试文字ABC-abc-01234</string>
    <string name="long_text_test">少时不识愁滋味，爱上层楼。爱上层楼。为赋新词强说愁。而今识尽愁滋味，欲说还休。欲说还休。却道天凉好个秋。</string>
    <string name="long_long_text_test">多年以后，奥雷连诺上校站在行刑队面前，准会想起父亲带他去参观冰块的那个遥远的下午。当时，马孔多是个二十户人家的村庄，一座座土房都盖在河岸上，河水清澈，沿着遍布石头的河床流去，河里的石头光滑、洁白，活象史前的巨蛋。这块天地还是新开辟的，许多东西都叫不出名字，不得不用手指指点点。每年三月，衣衫褴楼的吉卜赛人都要在村边搭起帐篷，在笛鼓的喧嚣声中，向马孔多的居 民介绍科学家的最新发明。他们首先带来的是磁铁。</string>

    <string name="add">+</string>
    <string name="subject">-</string>
    <string name="multiply">x</string>
    <string name="k_left">(</string>
    <string name="k_right">)</string>
    <string name="k_delete">--</string>

    <string name="other">其他</string>
    <string name="clean">清空</string>
    <string name="delete">删除</string>
    <string name="save">保存</string>
    <string name="back">返回</string>
    <string name="publish">发布</string>
    <string name="auto_open_soft">自动弹出软键盘</string>
    <string name="bottom_sheet_dialog">BottomSheetDialog</string>
    <string name="switch_panel">SwitchPanel</string>
    <string name="switch_panel_custom">SwitchPanelCustom</string>

    <string name="go_open">去开启</string>
    <string name="title">标题</string>
    <string name="description">描述</string>
    <string name="check_permission">检测权限</string>
    <string name="check_toast">检测Toast</string>
    <string name="show_toast">展示Toast</string>
    <string name="show_dialog">展示Dialog</string>

    <string name="switch_panel_1">第一张切换板</string>
    <string name="switch_panel_2">第二张切换板</string>

    <string name="test_input">文字数据…</string>
    <string name="test_bt">添加到数据库</string>
    <string name="alert_can_scroll">可滑动区域</string>

    <string name="dialog_normal">NormalDialog</string>
    <string name="dialog_full">FullDialog</string>

    <string name="fresco_basic">FrescoBasic</string>
    <string name="place_holder">PlaceHolder</string>
    <string name="failure_image">FailureImage</string>
    <string name="retry_image">RetryImage</string>
    <string name="progress_bar">ProgressBar</string>
    <string name="press_overlay">pressOverlay</string>

    <string name="back_thread">后台进程</string>
    <string name="float_view">前台悬浮窗</string>
    <string name="close_listener">熄屏监听</string>
    <string name="notify_bar">常驻通知栏</string>

    <string name="input_live_data">输入数据</string>
    <string name="open_new_activity">打开新界面</string>

    <string name="nine_from_res_drawable">来自Drawable目录的.9图</string>
    <string name="nine_from_local_file">来自文件目录的.9图</string>

    <string name="tangram_default">TangramDefault</string>
    <string name="tangram_define">TangramDefine</string>
    <string name="tangram_card">TangramCard</string>
    <string name="tangram_cell">TangramCell</string>
    <string name="deep_link">DeepLink</string>

    <string name="load_more">加载更多</string>

    <string name="alarm_info">这是一个Alarm测试\n每隔10秒会发出一个Intent\n展示一个全局的Toast\n点击按钮启动</string>

    <string name="adapter_delegate">AdapterDelegate</string>
    <string name="multi_type_adapter">MultiTypeAdapter</string>
    <string name="define_list_adapter">DefineListAdapter</string>
    <string name="custom_list_adapter">CustomListAdapter</string>
    <string name="waterfall_list">WaterfallList</string>

    <string name="litho_text">LithoText</string>
    <string name="local_text">LocalText</string>
    <string name="poem_text">PoemText</string>
    <string name="litho_percent">LithoPercent</string>
    <string name="litho_multi_img">LithoMultiImg</string>
    <string name="litho_card">LithoCard</string>
    <string name="litho_row_text">LithoRowText</string>

    <string name="calendar_add">add</string>
    <string name="calendar_check">check</string>
    <string name="calendar_update">update</string>
    <string name="calendar_delete">delete</string>
    <string name="calendar_title">Title</string>
    <string name="calendar_des">Description</string>
    <string name="calendar_submit">Submit</string>
    <string name="calendar_start_time">StartTime</string>
    <string name="calendar_end_time">EndTime</string>

    <string name="bezier_click">BezierClick</string>
    <string name="bezier_wave">BezierWave</string>
    <string name="bezier_double_click">BezierDoubleClick</string>

    <string name="svg_a_image">SVGAImage</string>
    <string name="svg_a_surface">SVGASurface</string>
    <string name="svg_a_file">SVGAFile</string>
    <string name="svg_a_multi">SVGAMulti</string>
    <string name="svg_a_same_svg">SameAnimSvg</string>
    <string name="svg_a_same_lottie">SameAnimLottie</string>

    <string name="waterfall_header">Header</string>

    <string name="anim_svg_image">AImage</string>
    <string name="anim_svg_surface">Surface</string>
    <string name="anim_svg_file">File</string>
    <string name="anim_svg_Lottie">Lottie</string>
    <string name="anim_spring_translation">Translation</string>
    <string name="anim_spring_scale">Scale</string>

    <string name="network_request">Request</string>

    <string name="wall_paper_lock">设置锁屏</string>
    <string name="wall_paper_home">设置壁纸</string>

    <string name="draw_img_normal">Normal</string>
    <string name="draw_img_matrix_scale">MatrixScale</string>
    <string name="draw_img_matrix_translate">MatrixTranslate</string>
    <string name="draw_img_matrix_rotate">MatrixRotate</string>
    <string name="draw_img_matrix_skew">MatrixSkew</string>
    <string name="draw_img_blur">BlurBitmap</string>
    <string name="draw_img_blur_alpha">BlurAlphaBitmap</string>
    <string name="draw_img_blur_cover_color">BlurCoverColorBitmap</string>
    <string name="draw_img_blur_alpha_linear">BlurAlphaLinearBitmap</string>

    <string name="grid_test_add">Add</string>
    <string name="grid_test_delete">Delete</string>

    <string name="x_fer_mode_normal">Normal</string>
    <string name="x_fer_mode_clear">Clear</string>
    <string name="x_fer_mode_add">Add</string>
    <string name="x_fer_mode_darken">Darken</string>
    <string name="x_fer_mode_lighten">Lighten</string>
    <string name="x_fer_mode_multiply">Multiply</string>
    <string name="x_fer_mode_overlay">Overlay</string>
    <string name="x_fer_mode_screen">Screen</string>
    <string name="x_fer_mode_xor">Xor</string>
    <string name="x_fer_mode_src">Src</string>
    <string name="x_fer_mode_src_over">SrcOver</string>
    <string name="x_fer_mode_src_in">SrcIn</string>
    <string name="x_fer_mode_src_a_top">SrcATop</string>
    <string name="x_fer_mode_src_out">SrcOut</string>
    <string name="x_fer_mode_dst">Dst</string>
    <string name="x_fer_mode_dst_in">DstIn</string>
    <string name="x_fer_mode_dst_out">DstOut</string>
    <string name="x_fer_mode_dst_over">DstOver</string>
    <string name="x_fer_mode_dst_a_top">DstATop</string>
    <string name="x_fer_mode_shadow">Shadow</string>

    <string name="anim_interpolator_linear">LinearInterpolator</string>
    <string name="anim_interpolator_linear_out_slow">LinearOutSlowInInterpolator</string>
    <string name="anim_interpolator_accelerate">AccelerateInterpolator</string>
    <string name="anim_interpolator_accelerate_decelerate">AccelerateDecelerateInterpolator</string>
    <string name="anim_interpolator_anticipate">AnticipateInterpolator</string>
    <string name="anim_interpolator_anticipate_overshoot">AnticipateOvershootInterpolator</string>
    <string name="anim_interpolator_bounce">BounceInterpolator</string>
    <string name="anim_interpolator_cycle">CycleInterpolator</string>
    <string name="anim_interpolator_decelerate">DecelerateInterpolator</string>
    <string name="anim_interpolator_delay">DelayInterpolator</string>
    <string name="anim_interpolator_fast_out_linear_in">FastOutLinearInInterpolator</string>
    <string name="anim_interpolator_fast_out_slow_in">FastOutSlowInInterpolator</string>
    <string name="anim_interpolator_frame">FrameInterpolator</string>
    <string name="anim_interpolator_overshoot">OvershootInterpolator</string>
    <string name="anim_interpolator_path">PathInterpolator</string>

    <string name="fresco_res">FrescoRes</string>
    <string name="fresco_net">FrescoNet</string>
    <string name="fresco_local">FrescoLocal</string>

    <string name="sort_data">Data</string>
    <string name="sort_insert">Insert</string>
    <string name="sort_select">Select</string>
    <string name="sort_pop">Pop</string>
    <string name="sort_merge">Merge</string>
    <string name="sort_quick">Quick</string>
    <string name="sort_heap">Heap</string>

    <string name="full_screen_light">Light</string>
    <string name="full_screen_night">Night</string>

</resources>
