<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@color/color_white"
    >

  <include
      layout="@layout/common_toolbar"
      />

  <View
      style="@style/my_divide_line"
      />

  <TextView
      android:id="@+id/adapter_delegate"
      android:layout_width="match_parent"
      android:layout_height="54.0dp"
      android:text="@string/adapter_delegate"
      android:textColor="@color/color_1a1a1a"
      android:gravity="center_vertical"
      android:textSize="14.0dp"
      android:paddingLeft="@dimen/padding_12"
      android:paddingRight="@dimen/padding_12"
      tools:ignore="SpUsage"
      />

  <View
      style="@style/my_divide_line"
      />

  <TextView
      android:id="@+id/multi_type_adapter"
      android:layout_width="match_parent"
      android:layout_height="54.0dp"
      android:text="@string/multi_type_adapter"
      android:textColor="@color/color_1a1a1a"
      android:gravity="center_vertical"
      android:textSize="14.0dp"
      android:paddingLeft="@dimen/padding_12"
      android:paddingRight="@dimen/padding_12"
      tools:ignore="SpUsage"
      />

  <View
      style="@style/my_divide_line"
      />

  <TextView
      android:id="@+id/define_list_adapter"
      android:layout_width="match_parent"
      android:layout_height="54.0dp"
      android:text="@string/define_list_adapter"
      android:textColor="@color/color_1a1a1a"
      android:gravity="center_vertical"
      android:textSize="14.0dp"
      android:paddingLeft="@dimen/padding_12"
      android:paddingRight="@dimen/padding_12"
      tools:ignore="SpUsage"
      />

  <View
      style="@style/my_divide_line"
      />

  <TextView
      android:id="@+id/custom_list_adapter"
      android:layout_width="match_parent"
      android:layout_height="54.0dp"
      android:text="@string/custom_list_adapter"
      android:textColor="@color/color_1a1a1a"
      android:gravity="center_vertical"
      android:textSize="14.0dp"
      android:paddingLeft="@dimen/padding_12"
      android:paddingRight="@dimen/padding_12"
      tools:ignore="SpUsage"
      />

  <View
      style="@style/my_divide_line"
      />

  <TextView
      android:id="@+id/waterfall_list"
      android:layout_width="match_parent"
      android:layout_height="54.0dp"
      android:text="@string/waterfall_list"
      android:textColor="@color/color_1a1a1a"
      android:gravity="center_vertical"
      android:textSize="14.0dp"
      android:paddingLeft="@dimen/padding_12"
      android:paddingRight="@dimen/padding_12"
      tools:ignore="SpUsage"
      />

  <View
      style="@style/my_divide_line"
      />

</LinearLayout>